<resources>
    <string name="app_name">housing</string>
    <string name="slider_item">Slider Item</string>
    <string name="next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">skip</string>
    <string name="slide_one_text">Find the home of your dreams</string>
    <string name="slide_one_text_two">Your one click destination to find your dream home around the corner.</string>
    <string name="login">Login</string>
    <string name="enter_details">Please enter your details</string>
    <string name="email_or_mobile">Email or mobile</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="signup">Sign Up</string>
    <string name="rent">Rent</string>
    <string name="sell">Sell</string>
    <string name="basic_info">Basic Info</string>
    <string name="ihave">I have</string>

</resources>