<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".property.PropertyDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/rg_property_for"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/rb_sell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sell" />

            <RadioButton
                android:id="@+id/rb_rent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rent" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_basic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/basic_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_property_for" />


        <TextView
            android:id="@+id/tv_ihave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/ihave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_basic" />

        <RadioGroup
            android:id="@+id/rg_building_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ihave">

            <RadioButton
                android:id="@+id/rb_residential"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Residential" />

            <RadioButton
                android:id="@+id/rb_commercial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Commercial" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_property_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="Property Type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_building_type" />

        <RadioGroup
            android:id="@+id/rg_property_typ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_property_type">

            <RadioButton
                android:id="@+id/rb_apartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Apartment" />

            <RadioButton
                android:id="@+id/rb_independent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Independent" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_constrution_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="Construction Status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_property_typ" />

        <RadioGroup
            android:id="@+id/rg_construction_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_constrution_status">

            <RadioButton
                android:id="@+id/rb_ready_to_move"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ready To move" />

            <RadioButton
                android:id="@+id/rb_under_construction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Construction" />
        </RadioGroup>

        <EditText
            android:id="@+id/et_age_of_property"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="Age of Property"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_construction_status" />

        <TextView
            android:id="@+id/tv_bhk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="BHK"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_age_of_property" />

        <RadioGroup
            android:id="@+id/rg_bhk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_bhk">

            <RadioButton
                android:id="@+id/rb_one_bhk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1" />

            <RadioButton
                android:id="@+id/rb_two_bhk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_bathroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="Bath Room"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_bhk" />

        <RadioGroup
            android:id="@+id/rg_bathroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_bathroom">

            <RadioButton
                android:id="@+id/rb_one_bath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1" />

            <RadioButton
                android:id="@+id/rb_two_bath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_balcony"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="Balcony"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_bathroom" />

        <RadioGroup
            android:id="@+id/rg_balcony"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_balcony">

            <RadioButton
                android:id="@+id/rb_one_balcony"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1" />

            <RadioButton
                android:id="@+id/rb_two_balcony"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_furniture_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="Furnish Type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_balcony" />

        <RadioGroup
            android:id="@+id/rg_furnish_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_furniture_type">

            <RadioButton
                android:id="@+id/rb_fully"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fully Furnished" />

            <RadioButton
                android:id="@+id/rb_semi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Semi Furnished" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_parking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="Parking"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_furnish_type" />

        <RadioGroup
            android:id="@+id/rg_parking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_parking">

            <RadioButton
                android:id="@+id/rb_one_parking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1" />

            <RadioButton
                android:id="@+id/rb_two_parking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2" />
        </RadioGroup>

        <EditText
            android:id="@+id/et_available_from"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="Available From"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_parking" />

        <EditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="Price"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_available_from" />

        <EditText
            android:id="@+id/et_security_deposit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="Security Deposit"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_price" />

        <EditText
            android:id="@+id/et_maintenance"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="Maintenance"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_security_deposit" />

        <EditText
            android:id="@+id/et_built_area"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="Built Area"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_maintenance" />

        <EditText
            android:id="@+id/et_carpet_area"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="Carpet Area"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_built_area" />

        <EditText
            android:id="@+id/et_comments"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="Others if any"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_carpet_area" />


        <Button
            android:id="@+id/btn_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_comments"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>